# clean-architecture-fastapi-py

.github/workflows/: ci.yml
auctioning_platform/: Makefile  pyproject.toml
auctioning_platform/auctions/: pyproject.toml
auctioning_platform/libs/auctions/: pyproject.toml
auctioning_platform/libs/main/: pyproject.toml
auctioning_platform/main/: pyproject.toml
auctioning_platform/webapp/: app.py  pyproject.toml
auctioning_platform/webapp/api/: __init__.py  health_check.py
auctioning_platform/webapp/tests/: conftest.py  test_health_check.py
auctions/: Makefile
auctions/auctions/: setup.cfg
auctions/auctions/tests/: test_auctions.py
