[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.2"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
