[metadata]
name = auctions
author = Kristoffer Andersson
author-email = kod.kristoff@gmail.com
summary = auctions Domain & Application
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/spraakbanken/json-streams-py
project_urls =
    Bug Tracker = https://github.com/spraakbanken/json-streams-py/issues
    Documentation = https://github.com/spraakbanken/json-streams-py
    Source Code = https://github.com/spraakbanken/json-streams-py
license = MIT
classifier =
	# Development Status :: 2 - Pre-Alpha
	Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    # uncomment if you test on these interpreters:
    # Programming Language :: Python :: Implementation :: IronPython
    # Programming Language :: Python :: Implementation :: Jython
    # Programming Language :: Python :: Implementation :: Stackless
    Topic :: Utilities

[files]
packages =
    auctions

[extras]
dev =
    pytest
    pytest-cov
    black
    isort
    pylint
    mypy

[tool:flake8]
max-line-length = 97

[tool:pytest]
junit_family=xunit1
